--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
+
 {
-    "routes": [
-      { "src": "/", "dest": "/" },
-      { "src": "/login", "dest": "/" },
-      { "src": "/profile", "dest": "/" }
-    ]
-  }
+  "rewrites":  [
+    {"source": "/(.*)", "destination": "/"}
+  ]
+}
